# swagger-output.json
@@ -8819,6 +8819,54 @@
         }
       }
     },
+    "/user/login": {
+      "post": {
+        "summary": "Iniciar sesión",
+        "description": "Permite a los usuarios iniciar sesión en la aplicación.",
+        "tags": [
+          "Usuarios"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "description": "Correo electrónico del usuario.",
+                    "example": "usuario@ejemplo.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "description": "Contraseña del usuario.",
+                    "example": 123456
+                  },
+                  "tipo": {
+                    "type": "string",
+                    "description": "Tipo de usuario (opcional).",
+                    "example": "admin"
+                  }
+                },
+                "required": [
+                  "email",
+                  "password"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Inicio de sesión exitoso."
+          },
+          "400": {
+            "description": "Error en la solicitud."
+          }
+        }
+      }
+    },
     "/user/actualizarUsuario/{id}": {
       "put": {
         "tags": [
